Big update for Http IotKit.
-removed unesseseary code,
-rewrote, how a rfid card is read and saved
-added comments
-added a better Post Request
-better prints for oled. (better use for standalone)

--- a/mbed_app.json
+++ b/mbed_app.json
@@ -2,11 +2,11 @@
     "config": {
         "wifi-ssid": {
             "help": "WiFi SSID",
-            "value": "\"LERNKUBE\""
+            "value": "\"UPC22F6498_2.4GHz\""
         },
         "wifi-password": {
             "help": "WiFi Password",
-            "value": "\"l3rnk4b3\""
+            "value": "\"Ut7kksrtmkSn\""
         }
     },    
     "target_overrides": {
